# yndx-python-handbook

./: .coveragerc  .flake8  .gitignore  .markdownlint.json  LICENSE  Makefile  README.MD  README.md  README.ru.md  fileTest.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml
2.1/: b.py  c.py
solutions/2.1/: 21_a.py  21_c.py  21_d.py  21_e.py  21_f.py  21_g.py  21_h.py  21_i.py  21_j.py  21_k.py  21_l.py  21_m.py  21_n.py  21_o.py  21_p.py  21_q.py  21_r.py  21_s.py  21_t.py  c.py  d.py  e.py  f.py  h.py  i.py  j.py  k.py  l.py  m.py  o.py  q.py  r.py  s.py
solutions/2.2/: 22_a.py  22_b.py  22_c.py  22_d.py  22_e.py  22_f.py  22_g.py  22_h.py  22_i.py  22_j.py  22_k.py  22_l.py  22_n.py  22_o.py  22_p.py  22_q.py  22_r.py  22_s.py  22_t.py  a22.py  e22.py  f22.py  g22.py  m22.py  p22.py  q22.py  r22.py  s22.py
solutions/2.3/: 23_a.py  23_b.py  23_c.py  23_d.py  23_f.py  23_g.py  23_h.py  23_i.py  23_j.py  23_l.py  23_m.py  23_n.py  23_o.py  23_p.py  23_r.py  23_s.py  23_t.py  d23.py  e23.py  g23.py  h23.py  i23.py  j23.py  k23.py  m23.py  n23.py  q23.py
solutions/2.4/: 24_a.py  24_b.py  24_c.py  24_d.py  24_e.py  24_f.py  24_g.py  24_h.py  24_i.py  24_k.py  24_l.py  24_o.py  24_p.py  24_q.py  24_r.py  24_s.py  24_t.py  c24.py  d24.py  j24.py  m24.py  n24.py
solutions/3.1/: 31_a.py  31_b.py  31_c.py  31_d.py  31_e.py  31_f.py  31_g.py  31_h.py  31_i.py  31_j.py  31_k.py  31_l.py  31_m.py  31_n.py  31_o.py  (+5 more)
tests/: conftest.py  constants.py  errors.py  solution_wrapper.py  test_errors.py  test_utils.py  utils.py
(+1073 files in other folders)
