[tool.poetry]
name = "yndx-python-handbook"
version = "0.1.0"
description = ""
authors = ["Andrei Pomortsev"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-spec = "^4.0.0"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
